import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.5.9' apply false
    id 'io.spring.dependency-management' version '1.1.7'
    id 'maven-publish'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'maven-publish'

    group = 'com.casualgames'
    version = '1.0.0'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom SpringBootPlugin.BOM_COORDINATES
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                groupId = project.group
                artifactId = project.name
                version = project.version

                pom {
                    withXml {
                        def depMgmt = asNode().appendNode('dependencyManagement')
                                .appendNode('dependencies')

                        def bom = depMgmt.appendNode('dependency')
                        bom.appendNode('groupId', 'org.springframework.boot')
                        bom.appendNode('artifactId', 'spring-boot-dependencies')
                        bom.appendNode('version', SpringBootPlugin.BOM_VERSION)
                        bom.appendNode('type', 'pom')
                        bom.appendNode('scope', 'import')
                    }
                }
            }
        }
    }
}